--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,48 @@
 h1 {
   font-family: "Times New Roman", Times, serif;
     text-align: center;
-  }
+}
 
 h2 {
   font-family: "Times New Roman", Times, serif;
   text-align: center;
-
 }
   
-  body {
-    width: 640px;
-    margin: 0 auto;
-  }
+body {
+  width: 640px;
+  margin: 0 auto;
+}
   
-  .full-img {
-    position: relative;
-    display: block;
-    width: 640px;
-    height: 480px;
-  }
+.full-img {
+  position: relative;
+  display: block;
+  width: 640px;
+  height: 480px;
+}
   
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 640px;
-    height: 480px;
-  }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 640px;
+  height: 480px;
+  background-color: rgba(0,0,0,0)
+}
   
-  button {
-    border: 0;
-    background: gray ;
-    top: 2px;
-    left: 2px;
-  }
+button {
+  border: 0;
+  background: rgba(150, 150, 150, 0.185) ;
+  text-shadow: 1px 1px 1px grey;
+  border: 1px solid rgba(153, 153, 153, 0.589);
+  position: absolute;
+  cursor: pointer;
+  top: 2px;
+  left: 2px;
+}
   
-  .thumb-bar img {
-    display: block;
-    width: 20%;
-
-  }
+.thumb-bar img {
+  display: block;
+  width: 20%;
+  cursor: pointer;
+  float: right;
+}
