--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   height: 480px;
 }
   
-.overlay {
+.shade {
   position: absolute;
   top: 0;
   left: 0;
@@ -31,7 +31,7 @@ body {
   
 button {
   border: 0;
-  background:black  ;
+  background:gray  ;
   text-shadow: 1px 1px 1px grey;
   border: 1px solid rgba(153, 153, 153, 0.6);
   position: absolute;
